--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/javascript" src="https://spikmi.com/Widget?Id=3503"></script>
   </body>
 </html>
